# cpp-starter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
contrib/cmake-downloadProject/: README.md
src/example/: CMakeLists.txt  example.cpp  example.h  example.test.cpp  main.cpp
